@@ -7,7 +7,7 @@ Trunk (unreleased changes)
   NEW FEATURES
     HADOOP-2061 Add new Base64 dialects
     HADOOP-2084 Add a LocalHBaseCluster
-    HADOOP-2068 RESTful interface
+    HADOOP-2068 RESTful interface (Bryan Duxbury via Stack)
 
   OPTIMIZATIONS
 
@@ -45,6 +45,7 @@ Trunk (unreleased changes)
    HADOOP-2308 null regioninfo breaks meta scanner
    HADOOP-2304 Abbreviated symbol parsing error of dir path in jar command
                (Edward Yoon via Stack)
+   HADOOP-2320 Committed TestGet2 is managled (breaks build).
 
   IMPROVEMENTS
    HADOOP-2401 Add convenience put method that takes writable
